# UGV-project

./: .gitignore  README.md  backend_runner.py  main.py  readme.md
Theory/: ugv_master_implementation.md  ugv_work_division.md
ai/: __init__.py
algorithms/: dijkstra_algorithm.py  hybrid_astar.py  rrt_slam.py
configs/: navigation_defaults.yaml
docs/: ai_foundation.md  navigation_foundation.md  project_overview.md  revised_execution_plan.md
path_finding/: backend_runner.py  main.py  run_backend_test.py
ros2_ws/src/autonomy_interfaces/: package.xml  setup.cfg  setup.py
ros2_ws/src/autonomy_interfaces/autonomy_interfaces/: __init__.py  contracts.py  qos.py  ros_conversions.py  serialization.py  topic_transport.py
ros2_ws/src/autonomy_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/autonomy_msgs/msg/: GridCell.msg  MissionGoal.msg  MissionState.msg  MotionCommand.msg  MotorStatus.msg  NavigationStatus.msg  OccupancyGrid.msg  PlannedPath.msg  PlannerStatus.msg  ReplanRequest.msg  SensorObservation.msg
ros2_ws/src/mapping/: package.xml  setup.cfg  setup.py
ros2_ws/src/mapping/mapping/: __init__.py  dynamic_world.py  live_sensor_adapters.py  map_provider.py  mock_map_node.py  mock_maps.py  occupancy_grid.py  sensor_adapter_runtime.py  sensor_fusion.py  sensor_projection.py  sensor_simulator.py  sensor_simulator_node.py
ros2_ws/src/mission_controller/: package.xml  setup.cfg  setup.py
ros2_ws/src/mission_controller/config/: lidar_adapter_defaults.yaml  ultrasonic_adapter_defaults.yaml
ros2_ws/src/mission_controller/launch/: person1_hardware_sensors.launch.py  person1_observe.launch.py  person1_stack.launch.py  person1_visualization.launch.py
ros2_ws/src/mission_controller/mission_controller/: __init__.py  demo.py  mission_controller_node.py  mission_monitor.py  mission_policy.py  mission_state_machine.py  monitor_node.py  orchestrator.py  topic_bus.py  topics.py  visualization_snapshot.py  visualizer_node.py
ros2_ws/src/mission_controller/rviz/: person1_navigation.rviz
scripts/: run_backend_analysis.py
simulation/: run_planner_demo.py
tests/: __init__.py  test_contract_serialization.py  test_demo_pipeline.py  test_dynamic_world.py  test_inference_pipeline.py  test_lidar_adapter_runtime.py  test_message_contracts.py  test_mission_monitor.py  test_mission_policy.py  test_mission_state_machine.py  test_motion_adapter.py  test_motor_controller.py  test_mvrsd_preparation.py  test_path_planner.py  test_person1_interfaces.py  test_phase1_baseline.py  test_ros_message_scaffold.py  (+6 more)
(+68 files in other folders)
