<?xml version="1.0"?>
<package format="3">
  <name>autonomy_msgs</name>
  <version>0.1.0</version>
  <description>Typed ROS2 messages for the UGV Person 1 autonomy pipeline.</description>
  <maintainer email="maintainer@example.com">UGV Team</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export/>
</package>

