<?xml version="1.0"?>
<package format="3">
  <name>mapping</name>
  <version>0.1.0</version>
  <description>UGV mock mapping package for occupancy grid generation.</description>
  <maintainer email="maintainer@example.com">UGV Team</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>autonomy_msgs</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
