<?xml version="1.0"?>
<package format="3">
  <name>mission_controller</name>
  <version>0.1.0</version>
  <description>UGV mission controller package for milestone one orchestration.</description>
  <maintainer email="maintainer@example.com">UGV Team</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>autonomy_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
